trying to get this to work

--- a/front-end/meeting-rooom-management-front/src/app/app.component.html
+++ b/front-end/meeting-rooom-management-front/src/app/app.component.html
@@ -21,6 +21,6 @@
 
 <footer class="footer">
   <div class="container">
-      <span>Live Coding Digital Innovation One - Kamila Santos Oliveira</span>
+      <span>footer</span>
   </div>
 </footer>
