--- a/front-end/meeting-rooom-management-front/src/app/features/room/room-list/room-list.component.html
+++ b/front-end/meeting-rooom-management-front/src/app/features/room/room-list/room-list.component.html
@@ -14,7 +14,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of rooms | async"`class="item-card">
+        <tr *ngFor="let item of room ">
           <td>{{item.name}}</td>
           <td>{{item.date}}</td>
           <td>{{item.startHour}}</td>
