--- a/front-end/meeting-rooom-management-front/src/app/features/room/create-room/create-room.component.html
+++ b/front-end/meeting-rooom-management-front/src/app/features/room/create-room/create-room.component.html
@@ -1,25 +1,25 @@
-<p>create-room works!</p>
 <h3>Create Room</h3>
 <div [hidden]="submited" style="width: 400px;">
-  <form (ngSubmit)="onSubmit()">
+  <form [formGroup]="roomForm" (ngSubmit)="onSubmit()">
+
     <div class="form-group">
       <label for="name">name</label>
-      <input type="text" class="form-control" id="name" required [(ngModel)]="room.name" name="name">
+      <input type="text" formControlName="name">
     </div>
 
     <div class="form-group">
       <label for="name">date</label>
-      <input type="text" class="form-control" id="date" required [(ngModel)]="room.date" name="date">
+      <input type="text" formControlName="date">
     </div>
 
     <div class="form-group">
       <label for="name">startHour</label>
-      <input type="text" class="form-control" id="startHour" required [(ngModel)]="room.startHour" name="startHour">
+      <input type="text" formControlName="startHour">
     </div>
 
     <div class="form-group">
         <label for="name">endHour</label>
-        <input type="text" class="form-control" id="endHour" required [(ngModel)]="room.endHour" name="endHour">
+        <input type="text" formControlName="endHour">
       </div>
 
     <button type="submit" class="btn btn-success">Submit</button>
@@ -27,5 +27,5 @@
 </div>
 
 <div [hidden]="!submited">
-  <button class="btn btn-success" (click)="newRoom()">Add</button> -->
+  <button class="btn btn-success" (click)="newRoom()">Add</button>
 </div>
